backends/drm: check activePending instead of active for when applying a new gamma ramp is allowed

The crtc may not be set yet in some cases

BUG: 471562